bug fixes: pom, docker-compose.yml, application.properties