@@ -1,6 +1,5 @@
 package com.itgirl.notificationservice.service;
 
-import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.io.IOException;
@@ -15,18 +14,17 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Component
-@RequiredArgsConstructor
 public class EmailLogService {
 
     private final Path logFile = Paths.get("emails.log");
-    private final List<String> logs = new ArrayList<>();
+    private final List<String> logs = Collections.synchronizedList(new ArrayList<>());
 
     public synchronized void logEmail(String email, String content) {
         String logEntry = String.format("%s - Email: %s, Content: %s",
                 LocalDateTime.now(), email, content);
         logs.add(logEntry);
         try {
-            Files.write(logFile, Collections.singletonList(logEntry + System.lineSeparator()),
+            Files.writeString(logFile, logEntry + System.lineSeparator(),
                     StandardOpenOption.CREATE, StandardOpenOption.APPEND);
         } catch (IOException e) {
             throw new RuntimeException("Failed to write log", e);
@@ -34,14 +32,18 @@ public class EmailLogService {
     }
 
     public List<String> getSortedLogs() {
-        return logs.stream()
-                .sorted()
-                .collect(Collectors.toList());
+        synchronized (logs) {
+            return logs.stream()
+                    .sorted()
+                    .collect(Collectors.toList());
+        }
     }
 
     public List<String> searchLogs(String keyword) {
-        return logs.stream()
-                .filter(line -> line.contains(keyword))
-                .collect(Collectors.toList());
+        synchronized (logs) {
+            return logs.stream()
+                    .filter(line -> line.contains(keyword))
+                    .collect(Collectors.toList());
+        }
     }
 }
